--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 <nav id="navbar">
     <div class="container">
-        <h1>Logo</h1>
+       <div class="plant"><h1>PlantFashion</h1></div>
         <ul id="nav-links">
-            <li class="home"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#">Plant Shop</a></li>
+            <li><a href="#">Inspirations</a></li>
+            <li><a href="#">About PlantFashion</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <div id="menu-icon">
@@ -33,9 +33,21 @@
 </nav>
 
 <div class="perfect">
-    <h1>Find the perfect</h1>
-    <h1>compliment</h1>
-    <h1>to your room</h1>
+    <h1 style="color: white;">Find the perfect</h1>
+    <h1 style="color: white;">compliment</h1>
+    <h1 style="color: white;">to your room</h1>
+
+   <div class="par">
+    <p style="color: white;">we will help you find plants that match you needs and style</p>
+    <p style="color: white;">check our offer in the store and surround yourself with greenery</p>
+
+   </div>
+
+   <div class="buy-now">
+    <button id="buy-now-button">Buy Now</button>
+    <script src="script.js"></script>
+        
+   </div>
 </div>
 
 <script src="script.js"></script>
