--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nathaniel Ben</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Bar</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Navigation Bar</title>
+        <link rel="stylesheet" href="styles.css" />
+      </head>
+      <body>
+        <!-- nav section -->
+        <nav id="navbar">
+          <div class="container">
+            <div class="plant"><h1>PlantFashion</h1></div>
+            <ul id="nav-links">
+              <li class="plant_shop"><a href="plant.html">Plant Shop</a></li>
+              <li><a href="inspiration.html">Inspirations</a></li>
+              <li><a href="about.html">About PlantFashion</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <div id="menu-icon">
+              <i class="fas fa-bars"></i>
+            </div>
+          </div>
+        </nav>
 
-<nav id="navbar">
-    <div class="container">
-       <div class="plant"><h1>PlantFashion</h1></div>
-        <ul id="nav-links">
-            <li><a href="#">Plant Shop</a></li>
-            <li><a href="#">Inspirations</a></li>
-            <li><a href="#">About PlantFashion</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <div id="menu-icon">
-            <i class="fas fa-bars"></i>
+        <!-- text section -->
+        <div class="perfect">
+          <h1 style="color: white">Find the perfect</h1>
+          <h1 style="color: white">compliment</h1>
+          <h1 style="color: white">to your room</h1>
+
+          <div class="par">
+            <p style="color: white">
+              we will help you find plants that match you needs and style
+            </p>
+            <p style="color: white">
+              check our offer in the store and surround yourself with greenery
+            </p>
+          </div>
+
+          <div class="buy-now">
+            <button id="buy-now-button">Buy Now</button>
+            <script src="script.js"></script>
+          </div>
         </div>
-    </div>
-</nav>
 
-<div class="perfect">
-    <h1 style="color: white;">Find the perfect</h1>
-    <h1 style="color: white;">compliment</h1>
-    <h1 style="color: white;">to your room</h1>
-
-   <div class="par">
-    <p style="color: white;">we will help you find plants that match you needs and style</p>
-    <p style="color: white;">check our offer in the store and surround yourself with greenery</p>
-
-   </div>
-
-   <div class="buy-now">
-    <button id="buy-now-button">Buy Now</button>
-    <script src="script.js"></script>
-        
-   </div>
-</div>
-
-<script src="script.js"></script>
-</body>
-</html>
-
-</body>
+        <script src="script.js"></script>
+      </body>
+    </html>
+  </body>
 </html>
