--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
       </head>
       <body>
         <!-- nav section -->
+
         <nav id="navbar">
           <div class="container">
-            <div class="plant"><h1>PlantFashion</h1></div>
+            <div>
+          <img class="big" src="images/Nlogo.png" alt="logo-img">
+             <div class="plant"><h1>PlantFashion</h1>
+
+             </div>
+            
+            </div>
             <ul id="nav-links">
               <li class="plant_shop"><a href="plant.html">Plant Shop</a></li>
               <li><a href="inspiration.html">Inspirations</a></li>
