--- a/inspiration.html
+++ b/inspiration.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nath Ben</title>
-    <link rel="stylesheet" href="css/inspirations.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/inspirations.css" />
+  </head>
+  <body>
     <div class="inspiration">
-<h1>Inspiration</h1>
+      <h1>Inspiration</h1>
+      
     </div>
-</body>
+  </body>
 </html>
