--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
         <nav id="navbar">
           <div class="container">
             <div>
-          <img class="big" src="images/Nlogo.png" alt="logo-img">
-             <div class="plant"><h1>PlantFashion</h1>
-
-             </div>
-            
+              <img class="big" src="images/Nlogo.png" alt="logo-img" />
+              <div class="plant"><h1>PlantFashion</h1></div>
             </div>
             <ul id="nav-links">
               <li class="plant_shop"><a href="plant.html">Plant Shop</a></li>
